--- a/About.css
+++ b/About.css
@@ -252,6 +252,39 @@ p{
     margin-bottom: 0;
 }
 
+/*Bigger Screen*/
+
+@media screen and (min-width: 1400px) {
+
+  #hero{
+    margin-right: 0%;
+    margin-top: 0%;
+  }
+
+  .container{
+    margin-left: 0;
+    margin-right: 0;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+
+  .mvphoto{
+    display: none;
+  }
+
+  .Intro{
+    font-size: 4rem;
+  }
+
+  .youtubeembed{
+    height: 400px;
+  }
+
+
+}
+
+/*Bigger Screen*/
 
 
 
