--- a/About.css
+++ b/About.css
@@ -525,6 +525,7 @@ text-decoration: none;
   margin: 0;
   padding: 0;
   border-radius: 2rem;
+  box-shadow: 0px 0px 6.878px 0px rgba(0, 0, 0, 0.25) inset;
 }
 
 
@@ -573,8 +574,10 @@ text-decoration: none;
   align-items: flex-start;
   gap: 20px;
   border-radius: 2rem;
-  background: #e8e8e8;
   height: 100%;
+  background: #f1f1f1;
+  box-shadow: 0px 0px 6.878px 0px rgba(0, 0, 0, 0.25) inset;
+
   /* border: 2px black; */
 
 
