--- a/About.css
+++ b/About.css
@@ -456,11 +456,11 @@ p{
     gap: 1rem;
 }
 
-
+/*buttons*/
 .buttons{
-    display: flex;
-    align-items: flex-start;
-    gap: 1.5rem;
+  display: flex;
+  align-items: flex-start;
+  gap: 1.5rem;
 }
 
 .primarybtn{
@@ -476,12 +476,14 @@ p{
 
   border-radius: 300px;
   background: #121212;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
 .primarybtn:hover{
 color: #ffffff;
-background-color: #343434;
+background-color:  #5e5e5e;
 text-decoration: none;
+box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.125)inset;
 
 }
 
@@ -489,6 +491,7 @@ text-decoration: none;
 color: #ffffff;
 background-color: #232323;
 text-decoration: none;
+box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25)inset;
 }
 
 .secondarybtn{
@@ -503,29 +506,25 @@ text-decoration: none;
 
  
   border-radius: 300px;
-  border: 1px solid #121212;
+  /* border: 1px solid #121212; */
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
 
 }
 
 .secondarybtn:hover{
 color: #121212;
 background-color: #ececec;
-border: 1px solid #121212;
+/* border: 1px solid #121212; */
 text-decoration: none;
+box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.125) inset;
 }
 
 .secondarybtn:active{
 color: #121212;
 background-color: #c2c2c2;
-border: 1px solid #121212;
+/* border: 1px solid #121212; */
 text-decoration: none;
-}
-
-.youtubeembed{
-  margin: 0;
-  padding: 0;
-  border-radius: 2rem;
-  box-shadow: 0px 0px 6.878px 0px rgba(0, 0, 0, 0.25) inset;
+box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) inset;
 }
 
 
