--- a/WCWH.css
+++ b/WCWH.css
@@ -279,6 +279,33 @@ html, body {
 
 /* End of navbar ---------------*/
 
+/*leftright */
+
+.leftright{
+  display: flex;
+  flex-direction: row;
+  gap: 2.5rem;
+}
+
+.textside{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+@media (max-width: 900px) {
+
+  .leftright{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+}
+
+/*left right*/
+
+
 
 .banner{
     margin: 0%;
@@ -330,14 +357,16 @@ li{
     color: #757575;
 }
 
-.user-rep{
-    width: 50%;
-    margin: 5% auto 5% auto;
-}
 
 .user-persona{
     width: 100%;
     margin: 5% 0% 5% 0%;
+}
+
+.user-rep{
+  height: 200px;
+  width: 200px;
+  margin-top: 5%;
 }
 
 .btn{
