--- a/styles.css
+++ b/styles.css
@@ -232,7 +232,19 @@ p{
     padding: 0%;
 }
 
+/*leftright */
 
+.leftright{
+  display: flex;
+  flex-direction: row;
+  gap: 2.5rem;
+}
+
+.textside{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 
 
 
