--- a/LastMinute.css
+++ b/LastMinute.css
@@ -274,6 +274,37 @@ html, body {
   }
 }
 
+/*leftright */
+
+.leftright{
+  display: flex;
+  flex-direction: row;
+  gap: 2.5rem;
+}
+
+.textside{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+
+@media (max-width: 900px) {
+
+  .leftright{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .tile-img{
+    max-width: 100%;
+  }
+
+}
+
+/*left right*/
+
 
 
 
