--- a/styles.css
+++ b/styles.css
@@ -236,15 +236,30 @@ p{
 
 .leftright{
   display: flex;
-  flex-direction: row;
-  gap: 2.5rem;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 3rem;
+  
 }
 
-.textside{
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+@media (max-width: 800px) {
+
+  .leftright{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+  }
+
+  .workeximg{
+    width: 100%;
+  }
+
 }
+
+/*leftright */
 
 
 
@@ -340,12 +355,7 @@ p{
 
 /*companies*/
 
-.companies{
 
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-}
 
 .banner{
     color: #FFF;
