--- a/styles.css
+++ b/styles.css
@@ -239,7 +239,7 @@ p{
   flex-direction: row;
   align-items: flex-start;
   flex-wrap: wrap;
-  gap: 3rem;
+  justify-content: space-between;
   
 }
 
@@ -251,12 +251,9 @@ p{
     align-items: flex-start;
     justify-content: space-between;
     flex-wrap: wrap;
-    gap: 1.5rem;
+    gap: 4rem;
   }
 
-  .workeximg{
-    width: 100%;
-  }
 
 }
 
