--- a/thoughtcloud.css
+++ b/thoughtcloud.css
@@ -1,6 +1,9 @@
 .body{
-    margin: 10%;
+    margin: 0% 10%;
+    
 }
+
+
 
 .container{
     display: grid;
@@ -27,7 +30,7 @@
 .side-nav-list{
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 1rem;
     margin-bottom: 2rem;
  }
 
@@ -67,6 +70,7 @@
     background-color:#fff;
     border-radius: 32px;
     padding: 0px 32px 0px 32px;
+    scroll-behavior: smooth;
     
 }
 
@@ -510,5 +514,11 @@ p{
 }
 
 /*case study specific code*/
+
+
+
+
+
+
 
 
