--- a/WCWH.css
+++ b/WCWH.css
@@ -399,7 +399,7 @@ p{
  
  
  .btn{
-   margin: 1% 0% 1% 0%;
+   margin: 1.5rem 0% 1.5rem 0%;
    padding: 1%;
    color: #fff;
    font-size: 1rem;
