--- a/About.css
+++ b/About.css
@@ -576,7 +576,7 @@ box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) inset;
   border-radius: 2rem;
   height: 100%;
   background: #f1f1f1;
-  box-shadow: 0px 0px 6.878px 0px rgba(0, 0, 0, 0.25) inset;
+  /* box-shadow: 0px 0px 6.878px 0px rgba(0, 0, 0, 0.25) inset; */
 
   /* border: 2px black; */
 
