--- a/About.css
+++ b/About.css
@@ -46,6 +46,7 @@ html, body {
 
 #navbar{
     padding: 2.75% 10%; /* navbar padding top and left*/
+    font-family: 'manrope', 'sans-serif';
 }
 
   
