--- a/Myco.css
+++ b/Myco.css
@@ -48,6 +48,12 @@
     
  }
 
+ .active {
+  font-weight: bold; /* Or any other styling to indicate the active link */
+}
+
+
+
 @media screen and (max-width:1000px) {
 
     .body{
@@ -181,6 +187,7 @@ p{
  
  #navbar{
    padding: 2.75% 10%; /* navbar padding top and left*/
+   font-family: 'manrope', 'sans-serif';
  }
  
  
