--- a/About.css
+++ b/About.css
@@ -439,23 +439,51 @@ p{
 /*Projects*/
 
 #projects{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 6rem;
+}
+
+.grid-container{
+display: grid;
+grid-template-columns: 1fr 1fr;
+gap: 8rem;
+align-items: start;
+}
+
+@media (max-width: 800px) {
+
+.grid-container{
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 4rem;
+  align-items: start;
+}
+
+
+
+
 }
 
 .projectcard{
-    display: flex;
-    align-items: flex-start;
-    gap: 2rem;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 3rem;
+}
+
+.card-img {
+width: 100%;
+height: auto;
+display: block;
 }
 
 .projectcardtext{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
 }
 
 /*buttons*/
@@ -574,9 +602,9 @@ box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) inset;
   flex-direction: column;
   align-items: flex-start;
   gap: 20px;
-  border-radius: 2rem;
+  border-radius: 1.5rem;
   height: 100%;
-  background: #f1f1f1;
+  background: #F7F7F7;
   /* box-shadow: 0px 0px 6.878px 0px rgba(0, 0, 0, 0.25) inset; */
 
   /* border: 2px black; */
@@ -585,7 +613,7 @@ box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) inset;
 }
 
 .name{
-  color: #4252EB;
+  color: #5F50CC;
   text-align: center;
   font-size: 1rem;
   font-weight: 800;
