--- a/About.css
+++ b/About.css
@@ -711,7 +711,7 @@ box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) inset;
 
 .backtotop{
   display: flex;
-  padding: 2rem ;
+  /* padding: 2rem ; */
   flex-direction: column;
   justify-content: center;
   align-items: center;
