--- a/GC.css
+++ b/GC.css
@@ -1,7 +1,7 @@
 
 
-body{
-  margin: 0px;
+.body{
+  margin: 0px 10%;
   padding: 0px;
 }
 
@@ -20,7 +20,7 @@ html{
     display: grid;
     grid-template-columns: 1fr 4fr;
     gap: 2.5rem;
-    margin: 1.5rem auto; /* 10% margin on both sides */
+    margin: 0 auto; /* 10% margin on both sides */
     width: 100%; /* optional, to ensure 10% margin */
     padding: 0px;
     
@@ -97,7 +97,7 @@ html{
 @media screen and (max-width:1000px) {
 
     .body{
-      margin: 0%;
+      margin: 5%;
 
     }
 
