--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body{
     display: inline-flex;
     flex-direction: column;
     align-items: left;
-    gap: 5rem;
+    /* gap: 4rem; */
 }
 
 /**/
@@ -229,7 +229,7 @@ p{
 
 }
 
-#hero, #companies, #projects ,#footer,#aboutme{
+#hero, #companies,#footer,#aboutme{
 
     margin: 0% 10% 120px 10%;
     padding: 0%;
@@ -339,14 +339,16 @@ p{
 }
 
 .industry_label{
-  padding: 8px 24px;
-  background-color: #5F50CC;
-  color: #fff;
   display: inline-block;
-  border-radius: 10rem;
+  padding: 8px 24px;
+  background-color: #5e50cc4f;
+  color: #5F50CC;
+  display: inline-block;
+  border-radius: 0.5rem;
   gap: 1rem;
   margin: 0;
-  font-weight: bolder;
+  font-family: 'Gilroyextrabold';
+  font-size: 0.75rem;
 }
 
 /*Bigger Screen*/
@@ -386,7 +388,7 @@ p{
 
 
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1000px) {
     .container{
       flex-direction: column;
       margin-top: 20%;
@@ -524,7 +526,8 @@ p{
 
 .tab-container {
   display: flex;
-  gap: 2rem;
+  gap: 0rem;
+  border-bottom: 1px solid #808080;
 
   
 }
@@ -533,17 +536,17 @@ p{
   padding: 8px 24px;
   cursor: pointer;
   border: none;
-  background-color: #f1f1f1;
-  border-radius: 2rem;
+  background-color: #fff;
   font-family: 'manrope', 'sans-serif';
+  color: #808080;
 }
 
 .tab-button.active {
-  background-color: #5f50cc;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25)inset;
-  color: #fff;
+  background-color: #fff;
+  border-bottom: 4px solid #4252EB;
   font-family: 'manrope', 'sans-serif';
   font-weight: bolder;
+  color: #121212;
 }
 
 .tab-content {
@@ -567,9 +570,16 @@ p{
   align-items: start;
 }
 
-@media (max-width: 800px) {
+.hero-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 8rem 6rem;
+  align-items: start;
+}
 
-  .grid-container{
+@media (max-width: 1000px) {
+
+  .grid-container, .hero-container{
     display: grid;
     grid-template-columns: 1fr;
     gap: 4rem;
@@ -578,13 +588,12 @@ p{
 
 
 
-
 }
 
 
 @media (min-width: 1800px) { /*bigger screen*/
 
-  .grid-container{
+  .grid-container,.hero-container{
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: start;
