--- a/styles.css
+++ b/styles.css
@@ -277,6 +277,8 @@ p{
 
 
 
+
+
 }
 
 /*leftright */
@@ -505,6 +507,15 @@ text {
     .educationbadge{
       max-width: 100%;
     }
+
+    .circle-container{
+      max-width: 300px;
+      margin: 2rem 0;
+    }
+
+    #hero{
+      margin-top: 2rem;
+    }
   }
 
 .herotext{
@@ -522,6 +533,7 @@ text {
   gap: 24px;
   
 }
+
 
 
 
@@ -631,8 +643,7 @@ text {
 .tab-container {
   display: flex;
   gap: 0rem;
-  border-bottom: 1px solid #808080;
-
+  border-bottom: 2px solid #808080;
   
 }
 
@@ -641,15 +652,16 @@ text {
   cursor: pointer;
   border: none;
   background-color: #fff;
-  font-family: 'manrope', 'sans-serif';
+  font-family: 'Gilroyextrabold' ;
+  font-size: 1.5rem;
   color: #808080;
 }
 
 .tab-button.active {
   background-color: #fff;
   border-bottom: 4px solid #4252EB;
-  font-family: 'manrope', 'sans-serif';
-  font-weight: bolder;
+  font-family: 'Gilroyextrabold' ;
+  font-size: 1.5rem;
   color: #121212;
 }
 
