--- a/styles.css
+++ b/styles.css
@@ -287,15 +287,16 @@ p{
 
 .UTbox{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   border-radius: 24px;
   background: #FFF;
-  align-items: center;
+  align-items: baseline;
   gap: 1rem;
   height: 100%;
   max-width: 700px;
   margin-bottom: 2rem;
 }
+
 
 .bevo{
   width: 64px
