--- a/GC.css
+++ b/GC.css
@@ -26,6 +26,14 @@ html{
     
 }
 
+@media screen and (min-width:1920px) {
+  .container{
+    margin-top: 2rem;
+  }
+
+}
+
+
 .case-study-container{
   display: grid;
   grid-template-columns: 1fr 2fr;
@@ -34,9 +42,9 @@ html{
 
 }
 
-.left-column {
+/* .left-column {
   
-}
+} */
 
 .right-column {
   display: flex; /* optional, depending on layout needs */
@@ -94,6 +102,12 @@ html{
   gap: 3rem;
  }
 
+ .col-3-grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr; 
+  gap: 3rem;
+ }
+
 @media screen and (max-width:1000px) {
 
     .body{
@@ -121,6 +135,16 @@ html{
     .gridLR{
       grid-template-columns: 1fr;
     }
+
+    .col-3-grid{
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr; 
+      gap: 3rem;
+     }
+
+     .prototypeplay{
+        display: none;
+     }
     
 }
 
@@ -149,12 +173,35 @@ h1{
 h2{
     font-size: 24px;
     font-family: 'manrope', 'sans-serif';
+    margin-bottom: 1rem;
 }
 
 p{
-    font-size: 16px;
+    font-size: 18px;
     color: #808080;
     font-family: 'manrope', 'sans-serif';
+    margin-bottom: 1.5rem;
+}
+
+.problem_statement{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.grey-rule {
+  border: none;
+  border-top: 2px solid grey;
+}
+
+.sticky_note{
+
+  color: #121212;
+  background-color: #ffd02f;
+  border: 2px solid #121212;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  height: fit-content;
 }
 
 .content-block{
@@ -463,6 +510,17 @@ p{
   max-width: 80%;
     
  }
+
+ .cover{
+  height: 400px; 
+  margin: 64px 0 0 0; 
+  background-color: #f7f7f7; 
+  background-image: url(GCassets/cover.jpg); 
+  background-repeat: none; 
+  background-size: contain ;
+ }
+
+
  
  
  @media (max-width: 900px) {
@@ -474,6 +532,10 @@ p{
 
    .persona-img{
       max-width: 50%;
+   }
+
+   .cover{
+    display: none;
    }
    
  
