--- a/GC.css
+++ b/GC.css
@@ -105,7 +105,27 @@ html{
  .col-3-grid{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr; 
-  gap: 3rem;
+  gap: 1.5rem;
+ }
+ 
+
+ .label{
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    font-weight: bold;
+    font-family: 'Gilroyextrabold';
+    color: #121212;
+    background-color: #ffd02f ;
+    border-radius: 0.5rem;
+ }
+
+ .label-set{
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  flex-wrap: wrap;
+  margin-top: 1rem;
  }
 
 @media screen and (max-width:1000px) {
@@ -134,12 +154,13 @@ html{
 
     .gridLR{
       grid-template-columns: 1fr;
+      gap: 1rem;
     }
 
     .col-3-grid{
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr; 
-      gap: 3rem;
+      grid-template-columns: 1fr; 
+      gap: 1rem;
      }
 
      .prototypeplay{
@@ -173,14 +194,12 @@ h1{
 h2{
     font-size: 24px;
     font-family: 'manrope', 'sans-serif';
-    margin-bottom: 1rem;
 }
 
 p{
     font-size: 18px;
     color: #808080;
     font-family: 'manrope', 'sans-serif';
-    margin-bottom: 1.5rem;
 }
 
 .problem_statement{
@@ -195,13 +214,12 @@ p{
 }
 
 .sticky_note{
-
   color: #121212;
   background-color: #ffd02f;
   border: 2px solid #121212;
   border-radius: 0.5rem;
   padding: 1rem;
-  height: fit-content;
+  margin: 0;
 }
 
 .content-block{
@@ -650,7 +668,31 @@ p{
 
 /*case study specific code*/
 
+.check-cross{
+  display: flex; 
+  flex-direction: row; 
+  gap: 1rem;
+  border-radius: 8px;
 
+}
+
+/*reveal*/
+
+.reveal {
+  opacity: 0.1;
+  transform: translateY(100px);
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+  margin: 40px 0;
+  background: #fff;
+  border-radius: 8px;
+}
+.reveal.show {
+  opacity: 1;
+  transform: translateY(0);
+  
+}
+
+/*reveal*/
 
 
 
