--- a/styles.css
+++ b/styles.css
@@ -246,7 +246,16 @@ p{
 
 }
 
-#hero, #companies,#footer,#aboutme{
+#hero{
+
+    margin: 0% 10% 120px 10%;
+    padding: 0%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+#companies,#footer,#aboutme{
 
     margin: 0% 10% 120px 10%;
     padding: 0%;
@@ -376,6 +385,25 @@ p{
   margin: 0;
   font-family: 'Gilroyextrabold';
   font-size: 0.75rem;
+}
+
+.label{
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  font-weight: bold;
+  font-family: 'Gilroyextrabold';
+  color: #121212;
+  background-color: #ffd02f ;
+  border-radius: 0.5rem;
+}
+
+.label-set{
+display: flex;
+flex-direction: row;
+gap: 1rem;
+flex-wrap: wrap;
+margin-top: 1rem;
 }
 
 
@@ -542,7 +570,7 @@ text {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 1rem;
+    gap: 0.5rem;
 
 }
 
