--- a/styles.css
+++ b/styles.css
@@ -794,7 +794,7 @@ text {
     display: flex;
     align-items: flex-start;
     flex-direction: column;
-    gap: 3rem;
+    gap: 2rem;
 }
 
 .card-img {
@@ -807,7 +807,7 @@ text {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 1rem;
+    gap: 0.75em;
 }
 
 /*buttons*/
