--- a/LastMinute.css
+++ b/LastMinute.css
@@ -97,20 +97,20 @@ justify-content: flex-start;
 }
 
 h1{
-  font-size: 32px;
+  font-size: 24px;
   font-family: 'Gilroyextrabold';
 }
 
 h2{
-  font-size: 24px;
+  font-size: 20px;
   font-family: 'manrope', 'sans-serif';
 }
 
 p{
-  font-size: 16px;
-  color: #808080;
-  font-family: 'manrope', 'sans-serif';
-  margin-bottom: 0%;
+    font-size: 16px;
+    color: #808080;
+    font-family: 'manrope', 'sans-serif';
+    margin-bottom: 1.5rem;
 }
 
 .content-block{
