--- a/Myco.css
+++ b/Myco.css
@@ -91,19 +91,20 @@
 }
 
 h1{
-    font-size: 32px;
-    font-family: 'Gilroyextrabold';
+  font-size: 24px;
+  font-family: 'Gilroyextrabold';
 }
 
 h2{
-    font-size: 24px;
-    font-family: 'manrope', 'sans-serif';
+  font-size: 20px;
+  font-family: 'manrope', 'sans-serif';
 }
 
 p{
     font-size: 16px;
     color: #808080;
     font-family: 'manrope', 'sans-serif';
+    margin-bottom: 1.5rem;
 }
 
 .content-block{
