--- a/styles.css
+++ b/styles.css
@@ -267,7 +267,7 @@ p{
 #hero{
     
     margin: 0 10% 120px 10%;
-    padding: 160px 0 0 0;
+    padding: 15% 0 0 0;
     display: flex;
     flex-direction: column;
     gap: 4rem;
