--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,18 @@ html, body {
 
 }
 
+#navbar.scrolled {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+@media (max-width: 1200px) {
+  
+  #navbar{
+    padding: 40px 10%;
+  }
+} 
+
+
   
   .top-nav {
     display: flex;
