--- a/GCds.css
+++ b/GCds.css
@@ -106,11 +106,17 @@ html{
  }
 
  .side-nav-list-item:hover{
-    color: #121212;
-    text-decoration: none;
-    font-weight: bold;
-    
- }
+  color: #121212;
+  text-decoration: none;
+  font-weight: 700;
+  
+}
+
+.side-nav-list-item.active {
+font-weight: 900;
+color: #121212;
+text-decoration: none;
+}
 
  .gridLR{
   display: grid; 
@@ -166,22 +172,57 @@ html{
 }
 
 
+/*ALL TYPOGRAPHY*/
+
 h1{
-  font-size: 24px;
   font-family: 'Gilroyextrabold';
+  color: #121212;
+  font-size: 2rem;
+  margin-top: 1%;
+  opacity: 100%;
+
+}
+
+.big-text{
+font-size: 56px;
+margin-bottom: 1rem;
+text-transform: uppercase;
+margin: 0;
+}
+
+.grey-caps-label{
+font-size: 1rem; 
+letter-spacing: 0.5px; 
+color: #666666;
+text-transform: uppercase;
+margin: 0;
+padding-bottom: 0.5rem;
+}
+
+
+p{
+  /* font-family: 'manrope', 'sans-serif'; */
+  font-size: 1.125rem;
+  color: #666666;
+  font-family: "Inter Tight", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400; /* Normal */
+  font-style: normal;
+
 }
 
 h2{
-  font-size: 20px;
-  font-family: 'manrope', 'sans-serif';
+  /* font-family: 'manrope', 'sans-serif'; */
+  font-size: 1.5rem;
+  color: #121212;
+  font-family: "Inter Tight", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500; /* Normal */
+  font-style: normal;
+
 }
 
-p{
-    font-size: 16px;
-    color: #808080;
-    font-family: 'manrope', 'sans-serif';
-    margin-bottom: 1.5rem;
-}
+/*ALL TYPOGRAPHY*/
 
 .content-block{
     margin: 4rem 0%;
@@ -262,22 +303,23 @@ p{
  
 
 
+
  #navbar{
   padding: 2.75% 10%; /* navbar padding top and left*/
   /* box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) ; */
-  font-family: 'manrope', 'sans-serif';
+  font-family: "Inter Tight", sans-serif;
 
 }
 
 #navbar.scrolled {
-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 @media (max-width: 1200px) {
 
-#navbar{
-  padding: 40px 10%;
-}
+  #navbar{
+    padding: 40px 10%;
+  }
 } 
  
  
@@ -319,6 +361,7 @@ box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    color: #121212;
    opacity: 100%;
    font-size: 1rem;
+   margin: auto;
  
  }
  
@@ -510,6 +553,18 @@ box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
   max-width: 80%;
     
+ }
+
+ .cover{
+  height: 480px; 
+  margin: 80px 0 3rem 0; 
+  background-repeat: none; 
+  background-size: contain;
+  background-color: #f7f7f7; 
+  background-image: url(GCdsassets/cover.svg); 
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
  }
  
  
