--- a/LastMinute.css
+++ b/LastMinute.css
@@ -52,9 +52,16 @@ justify-content: flex-start;
 .side-nav-list-item:hover{
   color: #121212;
   text-decoration: none;
-  font-weight: bold;
+  font-weight: 700;
   
 }
+
+.side-nav-list-item.active {
+font-weight: 900;
+color: #121212;
+text-decoration: none;
+}
+
 
 @media screen and (max-width:1000px) {
 
@@ -96,22 +103,57 @@ justify-content: flex-start;
 
 }
 
+/*ALL TYPOGRAPHY*/
+
 h1{
-  font-size: 24px;
   font-family: 'Gilroyextrabold';
+  color: #121212;
+  font-size: 2rem;
+  margin-top: 1%;
+  opacity: 100%;
+
+}
+
+.big-text{
+font-size: 56px;
+margin-bottom: 1rem;
+text-transform: uppercase;
+margin: 0;
+}
+
+.grey-caps-label{
+font-size: 1rem; 
+letter-spacing: 0.5px; 
+color: #666666;
+text-transform: uppercase;
+margin: 0;
+padding-bottom: 0.5rem;
+}
+
+
+p{
+  /* font-family: 'manrope', 'sans-serif'; */
+  font-size: 1.125rem;
+  color: #666666;
+  font-family: "Inter Tight", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400; /* Normal */
+  font-style: normal;
+
 }
 
 h2{
-  font-size: 20px;
-  font-family: 'manrope', 'sans-serif';
+  /* font-family: 'manrope', 'sans-serif'; */
+  font-size: 1.5rem;
+  color: #121212;
+  font-family: "Inter Tight", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500; /* Normal */
+  font-style: normal;
+
 }
 
-p{
-    font-size: 16px;
-    color: #808080;
-    font-family: 'manrope', 'sans-serif';
-    margin-bottom: 1.5rem;
-}
+/*ALL TYPOGRAPHY*/
 
 .content-block{
   margin: 4rem 0%;
@@ -230,7 +272,7 @@ to {
 #navbar{
   padding: 2.75% 10%; /* navbar padding top and left*/
   /* box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) ; */
-  font-family: 'manrope', 'sans-serif';
+  font-family: "Inter Tight", sans-serif;
 
 }
 
@@ -287,8 +329,10 @@ box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .case-nav-links:hover{
- color: #4252EB;
- text-decoration: none;
+  color: #4252EB;
+  text-decoration: none;
+  font-weight: 800;
+  
 }
 
 .menu-button-container {
@@ -387,7 +431,37 @@ box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
 /* End of navbar ---------------*/
 
+.cover{
+  height: 500px; 
+  margin: 80px 0 3rem 0; 
+  background-repeat: none; 
+  background-size: cover;
+  background-color: #f7f7f7; 
+  background-image: url(HCIAssets/heroposter.svg); 
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
+  border-bottom: 4px solid #f7f7f7;
+ }
 
+
+ @media (max-width: 900px) {
+ 
+  .btn{
+    padding: 5%;
+    margin: 5% 0% 5% 0%; ;
+  }
+
+  .persona-img{
+     max-width: 50%;
+  }
+
+  .cover{
+   display: none;
+  }
+  
+
+} 
 
 .banner{
    margin: 0%;
