--- a/WCWH.css
+++ b/WCWH.css
@@ -36,25 +36,32 @@
   
 }
 
+
 .side-nav-list{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    margin-bottom: 2rem;
- }
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 2rem;
+}
 
- .side-nav-list-item{
-    color: #808080;
-    text-decoration: none;
-    
- }
+.side-nav-list-item{
+  color: #808080;
+  text-decoration: none;
+  
+}
 
- .side-nav-list-item:hover{
-    color: #121212;
-    text-decoration: none;
-    font-weight: bold;
-    
- }
+.side-nav-list-item:hover{
+  color: #121212;
+  text-decoration: none;
+  font-weight: 700;
+  
+}
+
+.side-nav-list-item.active {
+font-weight: 900;
+color: #121212;
+text-decoration: none;
+}
 
 @media screen and (max-width:1000px) {
 
@@ -96,22 +103,58 @@
 
 }
 
+/*ALL TYPOGRAPHY*/
+
 h1{
-  font-size: 24px;
   font-family: 'Gilroyextrabold';
+  color: #121212;
+  font-size: 2rem;
+  margin-top: 1%;
+  opacity: 100%;
+
+}
+
+.big-text{
+font-size: 56px;
+margin-bottom: 1rem;
+text-transform: uppercase;
+margin: 0;
+}
+
+.grey-caps-label{
+font-size: 1rem; 
+letter-spacing: 0.5px; 
+color: #666666;
+text-transform: uppercase;
+margin: 0;
+padding-bottom: 0.5rem;
+}
+
+
+p{
+  /* font-family: 'manrope', 'sans-serif'; */
+  font-size: 1.125rem;
+  color: #666666;
+  font-family: "Inter Tight", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400; /* Normal */
+  font-style: normal;
+
 }
 
 h2{
-  font-size: 20px;
-  font-family: 'manrope', 'sans-serif';
+  /* font-family: 'manrope', 'sans-serif'; */
+  font-size: 1.5rem;
+  color: #121212;
+  font-family: "Inter Tight", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500; /* Normal */
+  font-style: normal;
+
 }
 
-p{
-    font-size: 16px;
-    color: #808080;
-    font-family: 'manrope', 'sans-serif';
-    margin-bottom: 1.5rem;
-}
+/*ALL TYPOGRAPHY*/
+
 
 .content-block{
     margin: 4rem 0%;
@@ -254,9 +297,11 @@ box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  }
  
  .case-nav-links:hover{
-   color: #4252EB;
-   text-decoration: none;
- }
+  color: #4252EB;
+  text-decoration: none;
+  font-weight: 800;
+  
+}
  
  .menu-button-container {
    display: none;
@@ -355,6 +400,39 @@ box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  /* End of navbar ---------------*/
  
  
+ .cover{
+  height: 500px; 
+  margin: 80px 0 3rem 0; 
+  background-repeat: none; 
+  background-size: cover;
+  background-color: #f7f7f7; 
+  background-image: url(wcwhpiece/heroposter.svg); 
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
+  border-bottom: 4px solid #f7f7f7;
+ }
+
+
+ 
+ 
+ @media (max-width: 900px) {
+ 
+   .btn{
+     padding: 5%;
+     margin: 5% 0% 5% 0%; ;
+   }
+
+   .persona-img{
+      max-width: 50%;
+   }
+
+   .cover{
+    display: none;
+   }
+   
+ 
+ }
  
  .banner{
      margin: 0%;
